--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  fluttertoast: ^8.2.5
   flutter:
     sdk: flutter
 
@@ -18,6 +19,12 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   hive_generator: ^1.1.3
   build_runner: ^2.1.11
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/icon/tasker.png"
